Small text adjustment

--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                 <div class="section-label">Photos</div>
                 <h2 class="section-title">Our Moments in Frames</h2>
                 <p class="section-sub">
-                    Six photos each are memories that we've shared.
+                    Some memories we have shared or something along those lines
                 </p>
 
                 <div class="gallery-grid"></div>
