--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                     <h1 class="names-script">Jamal &amp; Tiana</h1>
 
                     <p class="hero-sub">
-                        This page is just for us — a quiet corner of the internet where our love lives in words and
+                        This page is just for us a quiet corner of the internet where our love lives in words and
                         memories.
                         Jamal and Tiana. Two hearts, one journey, written in black and purple light.
                     </p>
@@ -732,7 +732,7 @@
                 <div class="section-label">For your birthday</div>
                 <h2 class="section-title">Happy Birthday, Tiana 🎂💜</h2>
                 <p class="section-sub">
-                    A simple page, a simple design — but every word here is full of you.
+                    A simple page, a simple design but every word here is full of you.
                 </p>
 
                 <div class="birthday-card">
@@ -745,21 +745,21 @@
                     <div class="birthday-date">24th November</div>
 
                     <p>
-                        Tiana, today isn’t just a date on a calendar — it’s the day the world was gifted you.
+                        Tiana, today isn’t just a date on a calendar it’s the day the world was gifted you.
                         I’m grateful that out of all the places your life could have led you, it crossed paths with
                         mine.
                     </p>
                     <p style="margin-top:0.8rem;">
                         On your birthday, I pray that your heart stays soft, your smile stays bright,
                         and your dreams keep unfolding bigger than you imagined. You deserve peace,
-                        joy, and a love that makes you feel safe — and every day, I’m trying to be that for you.
+                        joy, and a love that makes you feel safe and every day, I’m trying to be that for you.
                     </p>
                     <p style="margin-top:0.8rem;">
                         Thank you for letting me call you mine. Thank you for being my favourite message,
                         favourite call, favourite face, and favourite person.
                     </p>
                     <p style="margin-top:0.8rem;">
-                        Happy birthday, Tiana. I love you — today, and every day after this.
+                        Happy birthday, Tiana. I love you today, and every day after this.
                     </p>
                 </div>
             </section>
@@ -769,23 +769,23 @@
                 <div class="section-label">Our story</div>
                 <h2 class="section-title">How it started &amp; how it’s going</h2>
                 <p class="section-sub">
-                    It didn’t just “happen”. It unfolded — gently, beautifully, and exactly when it was meant to.
+                    It didn’t just “happen”. It unfolded gently, beautifully, and exactly when it was meant to.
                 </p>
 
                 <div class="card-row">
                     <div class="card">
-                        <h3>January 06, 2025 — the start of “us”</h3>
+                        <h3>January 06, 2025  the start of “us” again</h3>
                         <p>
                             We didn’t just start dating; we chose each other. January 06, 2025 became
-                            more than a date — it became the moment Jamal &amp; Tiana became a real story.
+                            more than a date it became the moment Jamal &amp; Tiana became a real story.
                         </p>
                         <p>
                             From the first real conversations, there was something different about you, Tiana.
-                            The way you talk, the way you see the world, the way you carry yourself — it all felt
+                            The way you talk, the way you see the world, the way you carry yourself it all felt
                             like a quiet answer to things I didn’t know how to ask for.
                         </p>
                         <p class="quote">
-                            “Some people arrive in your life like a soft song —
+                            “Some people arrive in your life like a soft song 
                             you don’t realise when it started, but suddenly you can’t imagine silence without it.”
                         </p>
                     </div>
@@ -799,7 +799,7 @@
                         <p>
                             I love your softness and your strength, the way you laugh and the way you think,
                             the way your presence calms my mind. With you, I feel seen, understood, and held
-                            in a way I can’t fully explain — and maybe that’s the beauty of it.
+                            in a way I can’t fully explain and maybe that’s the beauty of it.
                         </p>
                         <p class="quote">
                             “I don’t need perfect days. I just need them with you.”
@@ -818,7 +818,7 @@
                     <div class="timeline-item">
                         <div class="timeline-date">24 • 11 • (every year)</div>
                         <div class="timeline-text">
-                            Your birthday — the day the world got you, and the day I’m always extra grateful you exist.
+                            Your birthday the day the world got you, and the day I’m always extra grateful you exist.
                         </div>
                     </div>
                 </div>
@@ -845,7 +845,7 @@
                 <div class="section-label">Photos</div>
                 <h2 class="section-title">Our Moments in Frames</h2>
                 <p class="section-sub">
-                    Some memories we have shared or something along those lines
+                    Some memories we have shared 
                 </p>
 
                 <div class="gallery-grid"></div>
@@ -861,7 +861,7 @@
                 <div class="section-label">For you</div>
                 <h2 class="section-title">A poem about us</h2>
                 <p class="section-sub">
-                    Black and purple, quiet and soft — a small poem from my heart to yours.
+                    Black and purple, quiet and soft a small poem from my heart to yours.
                 </p>
 
                 <div class="poem-card">
@@ -971,7 +971,7 @@
                     title: "Indian Summer",
                     text: `
 Our first official date at Indian Summer wasn’t just about
-the food or the place — it was about you, across from me,
+the food or the place it was about you, across from me,
 and the feeling that this was the start of something real.
 The way you talked, laughed, and looked at me made
 everything else fade into the background.
@@ -981,7 +981,7 @@ everything else fade into the background.
                     label: "LOUD WORLD, QUIET HEARTS",
                     title: "Music Fest",
                     text: `
-Music Fest was noise and lights and energy — but somehow
+Music Fest was noise and lights and energy but somehow
 it still felt like our own little bubble. In the middle of
 the crowd, it was just us, sharing looks, jokes, and
 memories I’ll keep replaying in my head whenever I miss you.
